# benchmark_scheduler

./: .env_example  BenchmarkRunConfig.json  README.md  pyproject.toml  run_pipeline.py  test_benchmark_run_config.py  test_host_path_to_abs.py  test_user_config_reader.py
benchmark_scheduler/: benchmark_orchestrator.py  benchmark_run_config.py  benchmark_scheduler.py  user_config_reader.py
data/: user_config.csv
notebooks/: user_config_2.csv  user_config_read_testing.ipynb
pipeline/bench_stages/: run_eval.py  run_vlm.py
pipeline/scripts/: reader.py  writer.py
vlmhyperbench/: bench_cfg_gen.py  vlm_base.csv
vlmhyperbench/bench_stages/: run_vlm.py
